--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
     </head>
     <body>
         <header>
+            <nav>
+              <a href="/">
+                   <img crs=".images/logo.svg/logotyp.svg" alt="Логотип">
+              </a>
+          
+              <ul>
+                  <li><a href=""></a></li>
+                  <li><a></a></li>
+                  <li><a></a></li>
+              </ul>                           
+          </nav>
+          <ul>
+            <li></li>
+            <li></li>
+          </ul>
 
         </header>
         <main>
