--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="en">
     <head>
         <meta charset="'utf-8"/>
         <meta name="viewport" content="width=device-width, intial-scale=1.0"/>
@@ -9,7 +9,7 @@
         <header>
             <nav>
               <a href="/">
-                   <img crs=".images/logo.svg/logotyp.svg" alt="Логотип">
+                   <img crs=".images/logo.png/logo.png" alt="Логотип">
               </a>
           
               <ul>
