--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="uk">
     <head>
-        <meta charset="'utf-8"/>
-        <meta name="viewport" content="width=device-width, intial-scale=1.0"/>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, intial-scale=1.0">
         <title>Document</title>
     </head>
     <body>
@@ -57,36 +57,53 @@
           </section>
           <section>
             <h2>Чим ми займаємося</h2>
-            <ul>
-                <li> <img src="./images/img.img/img1.jpg" alt="фото набору коду" width="370"></li>
-                <li> <img src="./images/img.img/img2.jpg" alt="фото дзвінка" width="370"></li>
-                <li> <img src="./images/img.img/img3.jpg" alt="фото вибору кольору" width="370"></li>            
-            </ul>
+              <ul>
+                   <li> 
+                       <img src="./images/img.img/img1.jpg" alt="фото набору коду" width="370">
+                  </li>
+
+                  <li> 
+                      <img src="./images/img.img/img2.jpg" alt="фото дзвінка" width="370">
+                  </li>
+
+                  <li> 
+                      <img src="./images/img.img/img3.jpg" alt="фото вибору кольору" width="370">
+                  </li>            
+              </ul>
 
          </section>
          <section>
-            <ul>
               <h2>Наша команда</h2>
-              <li>   <img src="./images/photo.jpg/dem.jpg" alt="фото демяненка" width="270">
-                  <h3>Ігор Дем'яненко</h3>
-                  <p>Product Designer</p>
-              </li>
+               <ul>
+                 <li>
+                      <img src="./images/photo.jpg/dem.jpg" alt="фото демяненка" width="270">
+                      <h3>Ігор Дем'яненко</h3>
+                      <p>Product Designer</p>
+                 </li>      
+                  <li>  
+                     <img src="./images/photo.jpg/dem.jpg" alt="фото демяненка" width="270">
+                     <h3>Ігор Дем'яненко</h3>
+                     <p>Product Designer</p>
+                 </li>  
             
-              <li> <img src="./images/photo.jpg/rep.jpg" alt="фото репіної" width="270">
-                <h3>Ольга Рєпіна</h3>
-                <p>Frontend Developer</p>
-              </li>
+                 <li> 
+                     <img src="./images/photo.jpg/rep.jpg" alt="фото репіної" width="270">
+                     <h3>Ольга Рєпіна</h3>
+                     <p>Frontend Developer</p>
+                 </li>
 
-              <li> <img src="./images/photo.jpg/ter.jpg" alt="фото тарасова" width="270">
-                <h3>Микола Тарасов</h3>
-                <p>Marketing</p>
-              </li>
+                  <li> 
+                     <img src="./images/photo.jpg/ter.jpg" alt="фото тарасова" width="270">
+                     <h3>Микола Тарасов</h3>
+                     <p>Marketing</p>
+                 </li>
 
-              <li> <img src="./images/photo.jpg/erm.jpg" alt="фото єрмакова" width="270">
-                <h3>Михайло Єрмаков</h3>
-                <p>UI Designer</p>
-              </li>
-        </ul>
+                 <li> 
+                     <img src="./images/photo.jpg/erm.jpg" alt="фото єрмакова" width="270">
+                     <h3>Михайло Єрмаков</h3>
+                     <p>UI Designer</p>
+                 </li>
+             </ul>
          </section>
                   
         </main>
